--- a/src/components/atom/LoadingWrapper/LoadingWrapper.module.css
+++ b/src/components/atom/LoadingWrapper/LoadingWrapper.module.css
@@ -4,5 +4,14 @@
   right: 0;
   bottom: 0;
   top: 0;
-  background-color: red;
+  background-color: white;
+}
+
+.image {
+  position: relative;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  margin: auto;
 }
