--- a/src/components/molecules/TextArea/InputText.module.css
+++ b/src/components/molecules/TextArea/InputText.module.css
@@ -4,4 +4,6 @@
   padding: 5px 10px;
   border-radius: 5px;
   resize: none;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
