--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,3 +15,10 @@ a {
 * {
   box-sizing: border-box;
 }
+
+input[type="text"] {
+  /* Remove First */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
