--- a/src/components/atom/DropdownItem/DropdownItem.module.css
+++ b/src/components/atom/DropdownItem/DropdownItem.module.css
@@ -3,13 +3,14 @@
 }
 
 .header {
-  background-color: #f0f3f4;
+  background-color: #2e3192;
   padding: 10px;
   border-radius: 5px;
   display: flex;
 }
 
 .title {
+  color: white;
   margin: 0;
   font-weight: 600;
   font-size: 14px;
