--- a/src/components/atom/GenericButton/GenericButton.module.css
+++ b/src/components/atom/GenericButton/GenericButton.module.css
@@ -1,12 +1,13 @@
 .button {
   width: 100%;
-  background-color: #f0f3f4;
+  background-color: #c11c2d;
   border: none;
   padding: 10px 10px;
   margin: 10px 0;
   border-radius: 50px;
   transition: background-color 0.25s, color 0.25s;
   cursor: pointer;
+  color: white;
 }
 
 .button:hover {
