--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,7 +16,8 @@ a {
   box-sizing: border-box;
 }
 
-input[type="text"] {
+input[type="text"],
+textarea {
   /* Remove First */
   -webkit-appearance: none;
   -moz-appearance: none;
