--- a/src/components/atom/ListIcon/ListIcon.module.css
+++ b/src/components/atom/ListIcon/ListIcon.module.css
@@ -21,13 +21,28 @@
     margin: 10px 10px 10px 0;
     display: flex;
     border-radius: 50%;
-    background-color: gray;
+    background-color: #f0f3f4;
     height: 35px;
     width: 35px;
     align-content: center;
     justify-content: center;
+    transition: opacity 0.2s, transform 0.2s;
+}
+
+.arrow_container_open {
+    transform: rotate(90deg);
+}
+
+.arrow_container:hover {
+    opacity: 0.5;
 }
 
 .arrow_container img {
     width: 60%;
+}
+
+.dropdown {
+    background-color: #f0f3f4;
+    border-radius: 5px;
+    padding: 2px 10px;
 }
